fix: textalign

--- a/work/sass/style.scss
+++ b/work/sass/style.scss
@@ -692,7 +692,7 @@ a {
   width:60%;
   float: left;
   p {
-    text-align: justify;
+    text-align: left;
     letter-spacing: 3px;
     line-height: 1.7;
   }
